# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json5
.github/: copilot-instructions.md  pull_request_template.md
.github/config/: release-please-config.json
.github/instructions/: markdown.instructions.md  openscad.instructions.md  python.instructions.md  renovate.instructions.md
.github/workflows/: automerge-release.yml  pre-commit.yml  publish.yml  release-please.yml  sync-instructions.yml  validate-pr-title.yml
.lint/pylint/: .pylintrc
.lint/yamllint/: .yamllint
src/pre_commit_hooks/: __init__.py  flatten_validate.py  optimize_images.py
tests/: test_flatten_validate.py  test_optimize_images.py
